<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Switches -->
        <Switch
            android:id="@+id/EnableMods"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/EnableMods"/>

        <Switch
            android:id="@+id/SilenceSounds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SilenceSounds"/>

        <Switch
            android:id="@+id/TaskCanAttackMouse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/Task_CanAttackMouse"/>

        <Switch
            android:id="@+id/AttackRandomly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/AttackRandomly"/>

        <Switch
            android:id="@+id/UseCustomColors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/UseCustomColors"/>

        <Switch
            android:id="@+id/ShowShadow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ShowShadow"/>

        <!-- TextInputLayouts -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/GooseDefaultWhite">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/GooseDefaultWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="#ffffff"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/GooseDefaultOrange">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/GooseDefaultOrange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="#ffa500"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/GooseDefaultOutline">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/GooseDefaultOutline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="#d3d3d3"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Wandering times -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/MinWanderingTimeSeconds">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/MinWanderingTimeSeconds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="20"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/MaxWanderingTimeSeconds">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/MaxWanderingTimeSeconds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="40"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/FirstWanderTimeSeconds">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/FirstWanderTimeSeconds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="20"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/DrawSize">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/DrawSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:text="1.0"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
</ScrollView>
